--- a/pubsub.yaml
+++ b/pubsub.yaml
@@ -91,8 +91,8 @@ spec:
         type: RollingUpdate
       podTemplate:
         spec:
-          args:
-            - '--after iris session IRIS < /home/irisowner/after-install.script'
+          # args:
+          #   - '--after iris session IRIS < /home/irisowner/after-install.script'
           nodeSelector:
             px/enabled: 'true'
           resources:
