--- a/pubsub.yaml
+++ b/pubsub.yaml
@@ -29,11 +29,11 @@ spec:
             px/enabled: 'true'
           resources:
             requests:
-              cpu: 100m
-              memory: 700m
+              cpu: '1'
+              memory: 512Mi
             limits:
-              cpu: 500m
-              memory: 1Gi
+              cpu: '2'
+              memory: 2Gi
       irisDatabases:
         - name: PUBSUB_DATA
           directory: /irissys/data/IRIS/mgr/PUBSUB_DATA
@@ -97,10 +97,10 @@ spec:
             px/enabled: 'true'
           resources:
             requests:
-              cpu: 100m
-              memory: 750Mi
+              cpu: '1'
+              memory: 512Mi
             limits:
-              cpu: 500m
+              cpu: '2'
               memory: 2Gi
       volumeMounts:
       - name: pubsub-configmaps-cm
